# Halado_alk_prog

./: main.cpp
KUT_INFO/: CMakeLists.txt  README.md  desktop.ini  main.cpp  matrix.h
Szálkezelés/: data.txt  main.cpp  matrix.h
idomeres/: data.txt  main.cpp
masodfoku/: main.cpp
matrix/: main.cpp  matrix.h
nagy_beadando/: main.cpp  matrix2.h  vector2.h
newton_method/: main.cpp
newton_method2/: main.cpp
num_int/: main.cpp
vector_egyenes_ill/: main.cpp
vector_muveletek/: main.cpp  vector2.h
